[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2ln_server"
version = "1.1.4"
authors = [
  { name="patri9ck", email="patri9ck@gmail.com" },
]
description = "A way to display your Android phone notifications on your Linux computer."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    #"Programming Language :: Python :: 3.8",
    #"Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
license = {text = "GNU General Public License v3.0"}
dependencies = [
  'Pillow >= 9.0.1',
  'PyGObject >=3.42.1',
  'pyzmq >= 24.0.0',
  'setproctitle >= 1.2.2',
  'qrcode >= 7.3.1',
]

[project.urls]
"Homepage" = "https://github.com/patri9ck/a2ln-server"
"Bug Tracker" = "https://github.com/patri9ck/a2ln-server/issues"

[project.scripts]
a2ln = "a2ln:main"