[project]
name = "a2ln"
version = "1.1.10"
description = "A way to display Android phone notifications on Linux"
readme = "pypi.md"
requires-python = ">=3.8"
license = { file = "COPYING" }
authors = [
    { name = "patri9ck", email = "patri9ck@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Operating System :: POSIX :: Linux",
    "Topic :: Desktop Environment",
    "Topic :: Utilities"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://patri9ck.dev/a2ln/"
Repository = "https://github.com/patri9ck/a2ln-server"
Issues = "https://github.com/patri9ck/a2ln-server/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
a2ln = "a2ln:main"
